# kr_mav_control

./: .gitignore  Dockerfile  launch.sh
install/: local_setup.sh  setup.sh
install/kr_mavros_interface/share/kr_mavros_interface/: package.bash  package.zsh
interfaces/kr_crazyflie_interface/src/: so3cmd_to_crazyflie_component.cpp
interfaces/kr_mavros_interface/: CMakeLists.txt  package.xml
interfaces/kr_mavros_interface/config/: mavros.yaml
interfaces/kr_mavros_interface/include/kr_mavros_interface/: so3cmd_to_mavros_testor.hpp
interfaces/kr_mavros_interface/launch/: so3cmd_to_mavros_test.test.py  test.launch.py
interfaces/kr_mavros_interface/src/: so3cmd_to_mavros_component.cpp  so3cmd_to_mavros_nodelet.cpp
interfaces/kr_mavros_interface/test/: so3cmd_to_mavros_nodelet.test  so3cmd_to_mavros_nodelet_test.cpp  so3cmd_to_mavros_test.cpp  unit_tests.cpp
kr_mav_controllers/: CMakeLists.txt
kr_mav_msgs/: CMakeLists.txt
log/: latest_build
