<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kr_mavros_interface</name>
  <version>1.0.0</version>
  <description>kr_mavros_interface</description>
  <maintainer email="anurag.makineni@gmail.com">Anurag Makineni</maintainer>
  <maintainer email="JustinThomas@jtwebs.net">Justin Thomas</maintainer>
  <maintainer email="kartikmohta@gmail.com">Kartik Mohta</maintainer>
  <maintainer email="zuoxy@seas.upenn.edu">Xiaoye Zuo</maintainer>

  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies needed to compile and run this package. -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>kr_mav_msgs</depend>
  <depend>mavros_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
